--- a/src/ClientApp.fxml
+++ b/src/ClientApp.fxml
@@ -1,36 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientController">
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <Label fx:id="statusLabel" text="Status: Connecting..." textFill="#666666" BorderPane.alignment="CENTER">
+         <padding>
+            <Insets bottom="10.0" top="10.0" />
+         </padding>
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+   </top>
+
    <center>
-      <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <ScrollPane fitToWidth="true" style="-fx-background-color: transparent;" BorderPane.alignment="CENTER">
          <content>
-            <VBox fx:id="menuDisplay" prefHeight="200.0" prefWidth="100.0" />
+            <VBox fx:id="menuDisplay" spacing="10.0">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </VBox>
          </content>
       </ScrollPane>
    </center>
-   <bottom>
-      <Button fx:id="onOrdarPressed" mnemonicParsing="false" text="Ordar" BorderPane.alignment="CENTER" />
-   </bottom>
+
    <right>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefWidth="220.0" spacing="10.0" style="-fx-border-color: #cccccc; -fx-border-width: 0 0 0 1;" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="totalLabe" text="Label" />
-            <ScrollPane fitToHeight="true" prefHeight="200.0" prefWidth="200.0">
+            <Label text="Your Order" underline="true">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+
+            <ScrollPane fitToWidth="true" VBox.vgrow="ALWAYS">
                <content>
-                  <VBox fx:id="ordarDetails" prefHeight="200.0" prefWidth="100.0" />
+                  <VBox fx:id="orderDetails" spacing="5.0" />
                </content>
             </ScrollPane>
+
+            <Label fx:id="totalLabel" text="Total: 0 ₪">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </VBox>
    </right>
-   <top>
-      <Label fx:id="statusLabel" text="Status" BorderPane.alignment="CENTER" />
-   </top>
+
+   <bottom>
+      <VBox alignment="CENTER" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" onAction="#onOrderPressed" prefHeight="40.0" prefWidth="150.0" text="Place Order" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+         </children>
+         <padding>
+            <Insets bottom="15.0" top="10.0" />
+         </padding>
+      </VBox>
+   </bottom>
+
 </BorderPane>
